--- a/pag2.html
+++ b/pag2.html
@@ -14,7 +14,9 @@
 <body>
 
   <div class="poster">
+    <div id="im">
     <img class="motivation-img" src="https://wallpapers.com/images/high/fusion-saiyan-goku-black-pfp-d40irmudad6izuv1.webp" alt="Goku Super Sayins Blue"/>
+    </div>
     <h1>the special moment</h1>
     <p>
       “After avery day training.”
